fix(segment): fix missing color for toolbar color

--- a/core/src/components/segment/segment.ios.scss
+++ b/core/src/components/segment/segment.ios.scss
@@ -59,6 +59,7 @@
 // Toolbar with Color, Default Segment
 :host(.in-toolbar-color:not(.ion-color)) {
   background: #{current-color(contrast, 0.11)};
+  color: #{current-color(contrast)};
 }
 
 // Toolbar with Color, Default Segment, Checked
